# julia-fractal-gl-qt

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
src/App/: CMakeLists.txt  Window.cpp  Window.h  resources.qrc
src/App/Shaders/: diffuse.fs  diffuse.vs  julia.fs  julia.vs
